--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   </section>
 
   <section class="results">
+    <h1>H1 sugerido: <span class="h1-sugerido"></span></h1>
     <main>
       <div class="wrapper">
         <label for="">Title</label>
